Building out folder structure.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title>{{ page.title }}</title>
+      <title>{{ page.title }} » Cullen Schill</title>
       <!-- link to main stylesheet -->
       <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
@@ -9,17 +9,18 @@
       <nav>
           <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/about">About</a></li>
-              <li><a href="/blog">Posts</a></li>
+              <li><a href="/writing">Writing</a></li>
+              <li><a href="/photos">Photos</a></li>
           </ul>
       </nav>
-      <div class="container">
+      <!-- Should this be the main? -->
+      <main>
 
       {{ content }}
 
-      </div><!-- /.container -->
+    </main><!-- /.container -->
       <footer>
-          <p>Footer text. Ignore me.</p>
+          <p>Website by Cullen Schill</p>
       </footer>
       </body>
 </html>
